--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ header {
 header h1 {
     margin: 0;
     font-size: 24px;
+    color: #ffcc00;
 }
 
 .menu-icon {
@@ -24,6 +25,7 @@ header h1 {
     position: absolute;
     left: 20px;
     top: 20px;
+    color: #ffcc00;
 }
 
 .sidebar {
@@ -43,7 +45,7 @@ header h1 {
     padding: 10px 15px;
     text-decoration: none;
     font-size: 18px;
-    color: #f0f0f0;
+    color: #ffcc00;
     display: block;
     transition: 0.3s;
 }
@@ -57,34 +59,39 @@ header h1 {
     top: 10px;
     right: 20px;
     font-size: 36px;
+    color: #ffcc00;
 }
 
 #main-content {
     padding: 20px;
-    margin-left: 0;
 }
 
-h2 {
-    color: #ffcc00;
+.page {
+    display: none;
+}
+
+.center-button {
+    text-align: center;
 }
 
 button {
-    background-color: #ffcc00;
-    color: #1b1b1b;
     padding: 10px 20px;
+    background-color: #ffcc00;
     border: none;
-    border-radius: 4px;
+    color: #1b1b1b;
     cursor: pointer;
-    font-size: 16px;
 }
 
 button:hover {
-    background-color: #ffa500;
+    background-color: #f7c300;
 }
 
 footer {
     background-color: #333;
-    padding: 10px;
-    text-align: center;
     color: #f0f0f0;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
