--- a/css/styles.css
+++ b/css/styles.css
@@ -64,26 +64,26 @@ header h1 {
 
 #main-content {
     padding: 20px;
-}
-
-.page {
-    display: none;
+    margin-left: 0; /* Prevents content from moving */
+    transition: margin-left 0.5s;
 }
 
 .center-button {
     text-align: center;
+    margin-top: 20px;
 }
 
 button {
     padding: 10px 20px;
     background-color: #ffcc00;
     border: none;
-    color: #1b1b1b;
+    color: #333;
     cursor: pointer;
+    font-size: 16px;
 }
 
 button:hover {
-    background-color: #f7c300;
+    background-color: #e6b800;
 }
 
 footer {
