--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,8 @@ footer {
     bottom: 0;
     width: 100%;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.3);
-    
+}
+
 .additional-links {
     background: #333;
     border-radius: 10px;
@@ -211,59 +212,7 @@ footer {
     color: #fff;
 }
 
-.copy-button {
-    background: linear-gradient(135deg, #ffcc00, #ff9900);
-    color: #1b1b1b;
-    font-size: 18px;
-    padding: 15px 30px;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    transition: background 0.3s, color 0.3s;
-    cursor: pointer;
-}
-
-.copy-button:hover {
-    background: linear-gradient(135deg, #ff9900, #ffcc00);
-    color: #fff;
-}
-
-.discord-button {
-    background: linear-gradient(135deg, #7289DA, #5865F2);
-    color: #ffffff;
-    font-size: 18px;
-    padding: 15px 30px;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    transition: background 0.3s, color 0.3s;
-}
-
-.discord-button:hover {
-    background: linear-gradient(135deg, #5865F2, #7289DA);
-    color: #ffffff;
-}
-
-.vote-button {
-    background: linear-gradient(135deg, #FF4500, #FF6347);
-    color: #ffffff;
-    font-size: 18px;
-    padding: 15px 30px;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    transition: background 0.3s, color 0.3s;
-}
-
-.vote-button:hover {
-    background: linear-gradient(135deg, #FF6347, #FF4500);
-    color: #ffffff;
-}
-
-.copy-button {
+.copy-button, .discord-button, .vote-button {
     background: linear-gradient(135deg, #32CD32, #228B22);
     color: #ffffff;
     font-size: 18px;
@@ -275,8 +224,7 @@ footer {
     cursor: pointer;
 }
 
-.copy-button:hover {
+.copy-button:hover, .discord-button:hover, .vote-button:hover {
     background: linear-gradient(135deg, #228B22, #32CD32);
     color: #ffffff;
-}
-    
+    }
