--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background: linear-gradient(135deg, #1b1b1b, #333333);
+    color: #f0f0f0;
+    font-family: 'Arial', sans-serif;
     overflow-y: auto;
 }
 
