--- a/css/styles.css
+++ b/css/styles.css
@@ -136,9 +136,10 @@ footer {
     color: #f0f0f0;
     text-align: center;
     padding: 15px;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.3);
-    position: relative;
 }
 
 .additional-links {
