--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Montserrat:wght@700&display=swap');
+
 /* Global Styles */
 body {
   margin: 0;
